resuelvo algunos errores y mejoro algunas cosas